--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+    
+    <!--layouts/_messages.html.erb 取り込み-->
+    <%= render 'layouts/messages' %>
+    
     <%= yield %>
   </body>
 </html>
