--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html>
   <head>
     <title>RailsProjects2</title>
@@ -9,11 +9,17 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="d-flex flex-column">
     
-    <!--layouts/_messages.html.erb 取り込み-->
-    <%= render 'layouts/messages' %>
+    <%= render 'layouts/navigation' %>
     
-    <%= yield %>
+    <div id="page-content">
+      <%= render 'layouts/messages' %>
+      <%= yield %>
+    </div>
+    
+    <%= render 'layouts/footer' %>
+
   </body>
 </html>
+
