--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -29,7 +29,7 @@
           </div>
       
           <div class="form-group row justify-content-center">
-              <%= f.submit "Sign up", class: "btn btn-outline-light btn-lg" %> <!--create function-->
+              <%= f.submit(@user.new_record? ? "Sign up" : "Update account", class: "btn btn-outline-light btn-lg") %> <!--create function-->
           </div>
       <% end %>
 
