--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -4,7 +4,9 @@
     <div class="col-8 mt-4">
       <div class="card text-center shadow p-3 mb-5 bg-white rounded">
         <div class="card-header font-italic">
-          <%= article.user.username if article.user %>
+          <% if article.user %>
+            by <%= link_to article.user.username, user_path(article.user) %>
+          <% end %>
         </div>
         <div class="card-body">
           <h5 class="card-title">
@@ -14,8 +16,10 @@
             <%= truncate(article.description, length: 100) %>
           </p>
           <%= link_to "View", article_path(article), class: "btn btn-outline-success" %>
-          <%= link_to "Edit", edit_article_path(article), class: "btn btn-outline-success" %>
-          <%= link_to "Delete", article_path(article), method: :delete, data: {confirm: "Are you sure?"} ,class: "btn btn-outline-success" %>
+          <% if logged_in? && article.user == current_user %>
+            <%= link_to "Edit", edit_article_path(article), class: "btn btn-outline-success" %>
+            <%= link_to "Delete", article_path(article), method: :delete, data: {confirm: "Are you sure?"} ,class: "btn btn-outline-success" %>
+          <% end %>
         </div>
         <div class="card-footer text-muted">
           <small
