--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,22 +9,47 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
+      
+      <li class="nav-item">
+        <%= link_to "Bloggers", users_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
 
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Articles
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <%= link_to 'Create new article', new_article_path, class: "dropdown-item" %>
+          <% if logged_in? %>
+            <%= link_to 'Create new article', new_article_path, class: "dropdown-item" %>
+          <% end %>
           <%= link_to 'View articles', articles_path, class: "dropdown-item" %>
         </div>
+
+      <% if logged_in? %>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <%= "(Admin)" if current_user.admin? %> Profile [<%= current_user.username %>]
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <%= link_to 'User your profile', user_path(current_user), class: "dropdown-item" %>
+            <%= link_to 'Edit your profile', edit_user_path(current_user), class: "dropdown-item" %>
+            <%= link_to 'Delete profile', user_path(current_user), class: "dropdown-item text-danger", method: :delete, data: { confirm: "Are your sure?"} %>
+          </div>
+        </li>
+        
+          <%= link_to 'Logout', logout_path, class: "nav-link", method: :delete %>
+          
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-      </li>
+      <% else %>  
+        </li>
+         <%= link_to 'Log in', login_path, class: "nav-link" %>
+        </li>
+        </li>
+         <%= link_to 'Sign up', signup_path, class: "nav-link" %>
+        </li>
+      <% end %>
+      
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
