--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -16,7 +16,8 @@
             <%= truncate(article.description, length: 100) %>
           </p>
           <%= link_to "View", article_path(article), class: "btn btn-outline-success" %>
-          <% if logged_in? && article.user == current_user %>
+          
+          <% if logged_in? && (article.user == current_user || current_user.admin?) %>
             <%= link_to "Edit", edit_article_path(article), class: "btn btn-outline-success" %>
             <%= link_to "Delete", article_path(article), method: :delete, data: {confirm: "Are you sure?"} ,class: "btn btn-outline-success" %>
           <% end %>
