--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -3,11 +3,20 @@
   <div class="row justify-content-md-center">
     <div class="col-8 mt-4">
       <div class="card text-center shadow p-3 mb-5 bg-white rounded">
+       
         <div class="card-header font-italic">
           <% if article.user %>
             by <%= link_to article.user.username, user_path(article.user) %>
           <% end %>
+
+          <% if article.categories.any? %>
+            <div class="mt-2">
+              <%= render article.categories %>
+            </div>
+          <% end %>
+
         </div>
+
         <div class="card-body">
           <h5 class="card-title">
             <%= link_to article.title, article_path(article), class: "text-success" %>
@@ -33,3 +42,5 @@
   </div>
   <% end %>
 </div>
+
+
