edit and deploy again

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="text-center mt-4">
     <% if logged_in? && current_user.admin? %>
-        <%= link_to @category.name, edit_category_path(@category), class: "btn btn-outline-info" %>
+        <%= link_to "Edit category name", edit_category_path(@category), class: "btn btn-outline-info" %>
     <% end %>
 </div>
 
