--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,6 +8,10 @@
     background-color: black !important;
 }
 
+.navbar-toggler{
+  background-color: #fff;
+}
+
 .nav-link {
     color: white !important;
 }
@@ -48,13 +52,6 @@ body {
 
 #sticky-footer {
   flex-shrink: none;
-}
-
-/* Other Classes for Page Styling */
-
-body {
-//   background: #007bff;
-//   background: linear-gradient(to right, #0062E6, #33AEFF);
 }
 
 
